# tracer

./: .gitignore  Cargo.toml  LICENSE.md  README.md
benches/: random_world_complex.rs
docs/: bench.html  index.html
src/: lib.rs  main.rs
src/commons/: camera.rs  color.rs  hittable.rs  hittable_list.rs  material.rs  mod.rs  ray.rs  utils.rs  vector.rs
src/prelude/: camera.rs  color.rs  hittable.rs  hittable_list.rs  material.rs  mod.rs  ray.rs  render.rs  vector.rs
