[package]
name = "tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
indicatif = { version = "0.16.2", features = ["rayon"]}
crossbeam-channel = "0.5.2"
num_cpus = "1.13.1"
rayon = "1.5.1"

[profile.release]
lto = "fat"
